# novaposhta-api

./: README.md  pyproject.toml  requirements.txt
novaposhta/: __init__.py  types.py
novaposhta/documents/: __init__.py
novaposhta/documents/generate_report/: __init__.py  method.py  types.py
novaposhta/registers/: __init__.py
novaposhta/registers/add_document/: __init__.py  method.py  types.py
novaposhta/registers/delete/: __init__.py  method.py  types.py
novaposhta/registers/get_info/: __init__.py  method.py  types.py
novaposhta/registers/get_list/: __init__.py  method.py  types.py
novaposhta/registers/remove_document/: __init__.py  method.py  types.py
