[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "novaposhta" = "novaposhta" }

[project]
name = "novaposhta"
version = "0.0.1"
authors = [
    { name = "Teri anric", email = "2005ahi2005@gmail.com"},
]
description = "Novaposhta OpenAPI 2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests ~= 2.30.0",
    "pydantic ~= 1.10.7"
]

#[project.optional-dependencies]
#test = ["pytest"]

[project.urls]
"Documentation novaposhta" = "https://developers.novaposhta.ua/documentation"
#"Homepage" = "https://github.com/teri_anric/project"
#"Bug Tracker" = "https://github.com/teri_anric/project/issues"
